@@ -43,6 +43,9 @@ Changes for v2.06
 - Replace rxtx library (serial port) used by JP2BT with jSerialComm library (Marcin)
 -- Private build 13
 - Fix issue with BT disconnection by the remote not always working (Graham)
+-- Private build 14
+- Make BT uploads and downloads write/read up to end of segments, skipping all the filler FF's (Graham)
+- Make BT connect dialog automatically select the button for the last connected remote (Graham)
 
 Changes for v2.05
 -- Private build 1
